[gd_scene load_steps=4 format=2]

[ext_resource path="res://global_theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/NewInventory/InventoryTabs.tres" type="Theme" id=2]
[ext_resource path="res://Structures/Trader/TraderInterface.gd" type="Script" id=3]

[node name="TraderInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Panel" parent="."]
margin_left = 78.0
margin_top = 58.0
margin_right = 426.0
margin_bottom = 247.0

[node name="Label" type="Label" parent="Buy"]
margin_left = 27.0
margin_top = 7.0
margin_right = 67.0
margin_bottom = 40.0
text = "Buy"

[node name="Sell" type="Panel" parent="."]
visible = false
margin_left = 78.0
margin_top = 58.0
margin_right = 426.0
margin_bottom = 247.0

[node name="Label" type="Label" parent="Sell"]
margin_left = 16.0
margin_top = 14.0
margin_right = 56.0
margin_bottom = 47.0
text = "sell"

[node name="BuyButton" type="Button" parent="."]
margin_left = 86.0
margin_top = 21.0
margin_right = 164.0
margin_bottom = 60.0
focus_mode = 0
theme = ExtResource( 2 )
disabled = true
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellButton" type="Button" parent="."]
margin_left = 162.0
margin_top = 21.0
margin_right = 240.0
margin_bottom = 60.0
focus_mode = 0
theme = ExtResource( 2 )
text = "Sell"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="SellButton" to="." method="_on_SellButton_pressed"]
